WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164936
AX: ARIA tree & treeitem roles & aria-expanded state not spoken to VoiceOver iOS 10
https://bugs.webkit.org/show_bug.cgi?id=164936
Summary
AX: ARIA tree & treeitem roles & aria-expanded state not spoken to VoiceOver ...
Paul J. Adam
Reported
2016-11-18 10:29:29 PST
Steps to Reproduce: 1. Turn on VoiceOver on iOS 10. 2. Visit
http://w3c.github.io/aria-practices/examples/treeview/treeview-1a/treeview-1a.html
in Safari iOS. 3. Set focus to the Projects treeitem. Expected Results: VoiceOver speaks "File Viewer tree, Projects treeitem, collapsed". Actual Results: VoiceOver speaks "Projects".
Attachments
patch
(6.46 KB, patch)
2016-11-29 17:10 PST
,
Nan Wang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2016-11-18 10:29:45 PST
<
rdar://problem/29334274
>
Nan Wang
Comment 2
2016-11-29 17:10:17 PST
Created
attachment 295676
[details]
patch
WebKit Commit Bot
Comment 3
2016-11-29 20:38:47 PST
Comment on
attachment 295676
[details]
patch Clearing flags on attachment: 295676 Committed
r209118
: <
http://trac.webkit.org/changeset/209118
>
WebKit Commit Bot
Comment 4
2016-11-29 20:38:52 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug