AX: ARIA tree & treeitem roles & aria-expanded state not spoken to VoiceOver iOS 10 https://bugs.webkit.org/show_bug.cgi?id=164936 <rdar://problem/29334274>

Reviewed by Chris Fleizach.

Source/WebCore:

Added a new container type on iOS for trees. Also, since the treeitem role is ignored
on iOS, we should expose the expanded status of a treeitem to its accessible children.

Test: accessibility/ios-simulator/treeitem-expanded.html

* accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper _accessibilityTreeAncestor]):
(-[WebAccessibilityObjectWrapper treeItemParentForObject:]):
(-[WebAccessibilityObjectWrapper accessibilitySupportsARIAExpanded]):
(-[WebAccessibilityObjectWrapper accessibilityIsExpanded]):

LayoutTests:

* accessibility/ios-simulator/treeitem-expanded-expected.txt: Added.
* accessibility/ios-simulator/treeitem-expanded.html: Added.


Canonical link: https://commits.webkit.org/182804@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209118 268f45cc-cd09-0410-ab3c-d52691b4dbfc